# hello-qtwebengine

./: .git_archival.txt  .gitignore  CMakeLists.txt  CmakePresets.json  Icon.icns  README.md  build-macos.sh  entitlements.plist  main.cc
.github/workflows/: build.yml
cmake/: DynamicVersion.cmake
